# dotpath

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
docs/: api.rst  conf.py  index.rst
dotpath/: __init__.py
tests/: test_dotpath.py
