[project]
name = "dotpath"
version = "1.0.0"
description = "A module to access Python props using dotpath."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Silas Vasconcelos", email = "silasvasconcelos@hotmail.com.br" }]
keywords = ["helper", "utils"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[project.urls]
Documentation = "https://dotpath.readthedocs.io/en/latest"
Repository = "https://github.com/silasvasconcelos/dotpath"
Homepage = "https://github.com/silasvasconcelos/dotpath"
Issues = "https://github.com/silasvasconcelos/dotpath/issues"

[dependency-groups]
dev = [
  "pytest>=5.2",
  "ipython>=8.10.0",
  "pep8>=1.7.1",
  "pylint>=2.9.6",
  "tox>=4.0.0",
  "sphinx>=7.0.0",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"
